change ginore